# spanish_nlp

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  Makefile  README-dev.md  README.md  ROADMAP.md  __pyproject.toml  _pyproject.toml  classifiers.py  conda_env.txt  create_dataset.ipynb  debug.txt  details.md  explore_dataset.ipynb  notebook_test.ipynb  preprocess.py  process_data.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  test.ipynb
.github/workflows/: main.yml
.trunk/: trunk.yaml
examples/: Classify.ipynb  Data Augmentation.ipynb  Preprocess.ipynb  Spellchecking.ipynb  classifier_test.py  classify_df.py  dev.ipynb  preprocess_test.py
notebooks/: get_metrics.ipynb
source/: augmentation.rst  conf.py  index.rst  people.rst
spanish_nlp/: __init__.py  augmentation.py  classifiers.py  preprocess.py  process_data.py
spanish_nlp/augmentation/: __init__.py  abstract.py  spelling.py
spanish_nlp/utils/: emo_unicode.py  stopwords.py  stopwords_es.txt
src/: __init__.py  preprocess.py  process_data.py
src/spanish_nlp/: __about__.py  __init__.py  classifiers.py  preprocess.py
src/spanish_nlp/augmentation/: __init__.py  abstract.py  masked copy.py  masked.py  spelling.py
tests/: augmentation.py  augmentations_test.txt  classifier_test.py  classify_df.py  dev.ipynb  functions.ipynb  preprocess.py  preprocess_test.py  test.ipynb  test_augmentation.py  test_classifier.py  test_masked_augmentation.py  test_preprocess.py  test_spellchecker.py  test_spelling_augmentation.py
utilities/: emo_unicode.py  stopwords_es.txt
(+12 files in other folders)
